--- a/CF7-spreadsheets/.php_cs.dist
+++ b/CF7-spreadsheets/.php_cs.dist
@@ -23,6 +23,8 @@ $rules = [
     'ordered_class_elements' => true,
     'ordered_imports' => true,
     'phpdoc_order' => true,
+    '@PHP56Migration' => true,
+    '@PHP56Migration:risky' => true,
     'compact_nullable_typehint' => true,
     'void_return' => null,
 ];
