--- a/CF7-spreadsheets/composer.json
+++ b/CF7-spreadsheets/composer.json
@@ -1,22 +1,10 @@
 {
     "scripts": {
-        "lint": "php vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --diff --dry-run --ansi",
-        "lint-fix": "php vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --diff --ansi"
+        "lint": "php vendor/bin/php-cs-fixer fix --diff --dry-run --ansi",
+        "lint-fix": "php vendor/bin/php-cs-fixer fix --diff --ansi"
     },
     "require": {
-        "asimlqt/php-google-spreadsheet-client": "*",
-        "firebase/php-jwt": "*",
         "google/apiclient": "*",
-        "google/apiclient-services": "*",
-        "google/auth": "*",
-        "guzzlehttp/guzzle": "*",
-        "guzzlehttp/promises": "*",
-        "guzzlehttp/psr7": "*",
-        "monolog/monolog": "*",
-        "phpseclib/phpseclib": "*",
-        "psr/cache": "*",
-        "psr/http-message": "*",
-        "psr/log": "*",
         "friendsofphp/php-cs-fixer": "^2.15"
     }
 }
